# CodeExtract

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.bat  build_debug.spec  build_release.spec  main.py  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.github/workflows/: ci.yml  release.yml
src/: __init__.py
src/core/: __init__.py  config_manager.py  export_manager.py  logging_system.py  workflow.py
src/modules/: __init__.py  folder_scanner.py  python_analyzer.py  report_generator.py  vba_analyzer.py  vba_extractor.py  vba_optimizer.py
src/ui/: __init__.py  main_window.py
src/utils/: __init__.py  helpers.py  widgets.py
tests/: TEST_REPORT.md  __init__.py  test_config_manager.py  test_export_manager.py  test_helpers.py  test_integration.py  test_logging_system.py  test_modules.py
